# founders-cockpit

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.dev.yml
.claude/: launch.json
backend/: .env.example  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  crypto.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_default_approval_mode_user_per_role_approval.py
backend/apps/agents/: bootstrap.py  broadcast.py  models.py  registry.py  runtime.py  runtime_sdk.py  serializers.py  tasks.py  tools.py  urls.py  views.py
backend/apps/agents/migrations/: 0001_initial.py  0002_alter_agent_role.py
backend/apps/artifacts/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/artifacts/migrations/: 0001_initial.py  0002_previewversion.py
backend/apps/chat/: consumers.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/chat/migrations/: 0001_initial.py
backend/apps/pipelines/: models.py  orchestrator.py  serializers.py  urls.py  views.py
backend/apps/pipelines/migrations/: 0001_initial.py  0002_pipelinerun_description.py
backend/apps/projects/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/tasks/: models.py  serializers.py  urls.py  views.py
backend/apps/tickets/: models.py  orchestrator.py  serializers.py  urls.py  views.py
backend/cockpit/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/tests/: conftest.py  test_pipeline_orchestrator.py  test_preview_versioning.py  test_tools_safety.py
(+75 files in other folders)
