[project]
name = "founders-cockpit-backend"
version = "0.1.0"
description = "Founder's Cockpit — multi-tenant Django backend orchestrating Claude agents"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "channels[daphne]>=4.1",
    "channels-redis>=4.2",
    "celery>=5.4",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "anthropic>=0.40",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cockpit.settings"
python_files = ["test_*.py", "*_test.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
]
